# stm32G070Template

./: .cproject  .mxproject  .project  CMakeLists.txt  CMakeSettings.json  STM32G070_Template.ioc  STM32G070_Template.xml
Core/Inc/: stm32g0xx_hal_conf.h
Core/Src/: main.c  stm32g0xx_hal_msp.c
Src/: main.c
cmake/: toolchain.cmake
